package Robots.src.main.java.Client.Services;

import Robots.src.main.java.Client.Services.Service;

public class Classic extends Service {

    public Classic(){
    super(-1,3,0,0);
    }
    
}