package Robots.src.main.java.Client.Services;

public class Platinum extends Service {

    public Platinum(){
        super(-1,-1,0f,0f);
    }
    
}
