package CompanyUtils;

import Client.Client;
import Robots.Robot;

import java.util.*;


public class Company {
    private ArrayList<Robot> robots;
    private ArrayList<Client> clients;
    private AllocatorSystem allocatorSystem;


    public void createOrderPending(){ //TODO: DEFINIR LA FIRMA DE ESTE METODO


    }
}
