package CompanyUtils;

import Client.Client;

public interface PaymentModule {

    public float getDebt(Client client);

}
