package Robots.src.main.java.Order;

public class CleanType {
}
