package Services;

public class Economic extends Service {

    public Economic(){
        this.cleaningQuantity = 3;
        this.orderingQuantity = -1;
        this.orderValue = 0;
        this.maxDebt = 0;
    }
    
}